Database intergartion and business logic

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -209,6 +209,8 @@ linter:
     - void_checks
 
 analyzer:
+  errors:
+    avoid_renaming_method_parameters: ignore
   exclude:
     - '**.freezed.dart'
     - '**.g.dart'
