--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,15 @@ dependencies:
   fpdart: 1.1.1
   freezed_annotation: 2.4.4
   get_it: 8.0.2
-  go_router: 14.6.0
+  go_router: 14.6.1
+  hive_ce: 2.8.0+1
+  hive_ce_flutter: 2.1.0
   injectable: 2.5.0
   json_annotation: 4.9.0
   shared_preferences: 2.3.3
-  talker_bloc_logger: 4.4.7
-  talker_flutter: 4.4.7
+  talker_bloc_logger: 4.5.1
+  talker_flutter: 4.5.1
+  logging: ^1.2.0
 
 dev_dependencies:
   build_runner: 2.4.13
@@ -50,6 +53,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   freezed: 2.5.7
+  hive_ce_generator: 1.8.0
   injectable_generator: 2.6.2
   json_serializable: 6.9.0
 
