--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   shared_preferences: 2.3.3
   talker_bloc_logger: 4.5.1
   talker_flutter: 4.5.1
-  logging: ^1.2.0
+
 
 dev_dependencies:
   build_runner: 2.4.13
@@ -56,12 +56,18 @@ dev_dependencies:
   hive_ce_generator: 1.8.0
   injectable_generator: 2.6.2
   json_serializable: 6.9.0
+  flutter_launcher_icons: 0.14.1
 
 flutter_gen:
   integrations:
     flutter_svg: true
     rive: false
     lottie: true
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
